Fix overflow hidden issue on info pages

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1062,6 +1062,7 @@ button {
 	background-color: $gray;
 	width:100%;
 	overflow-x:hidden;
+	overflow-y:scroll !important;
 	// height:auto;
 	// overflow: auto;
 
